// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JenkinsArtifactSource tests after selecting jobName, artifactPath should be fetched and loading will be shown till response comes 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main inputWidth"
        >
          <div
            class="fieldAndOptions"
          >
            <div
              class="bp3-form-group"
              data-id="pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.artifactPath-0"
            >
              <label
                class="bp3-label"
                for="pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.artifactPath"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="jenkinsArtifact_pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.artifactPath"
                >
                  pipeline.artifactPathLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  style="width: 400px;"
                >
                  <div
                    class="bp3-popover-wrapper MultiTypeInput--select MultiTypeInput--fixedValueInput Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.artifactPath"
                          placeholder="loading"
                          style="padding-right: 0px;"
                          type="text"
                          value=""
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                            icon="chevron-down"
                          >
                            <svg
                              data-icon="chevron-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                chevron-down
                              </desc>
                              <path
                                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="fieldAndOptions"
          >
            <div
              class="bp3-form-group"
              data-id="pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.build-1"
            >
              <label
                class="bp3-label"
                for="pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.build"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="jenkinsArtifact_pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.build"
                >
                  pipeline.jenkinsBuild
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                  style="width: 400px;"
                >
                  <div
                    class="TextInput--main MultiTypeInput--input"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        class="bp3-input"
                        disabled=""
                        name="pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.build"
                        placeholder="<+input>"
                        type="text"
                        value="<+input>"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <span
              class="bp3-popover-wrapper bp3-dark"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                  id="configureOptions_pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.build"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-cog StyledProps--main"
                    icon="cog"
                  >
                    <svg
                      data-icon="cog"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        cog
                      </desc>
                      <path
                        d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`JenkinsArtifactSource tests renders fine for all Runtime values 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main inputWidth"
        >
          <div
            class="bp3-form-group"
            data-id="pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.jobName-0"
          >
            <label
              class="bp3-label"
              for="pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.jobName"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="jenkinsArtifact_pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.jobName"
              >
                Job Name
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                style="width: 400px;"
              >
                <div
                  class="TextInput--main MultiTypeInput--input"
                >
                  <div
                    class="bp3-input-group bp3-disabled"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.jobName"
                      placeholder="<+input>"
                      type="text"
                      value="<+input>"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="fieldAndOptions"
          >
            <div
              class="bp3-form-group"
              data-id="pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.artifactPath-1"
            >
              <label
                class="bp3-label"
                for="pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.artifactPath"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="jenkinsArtifact_pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.artifactPath"
                >
                  pipeline.artifactPathLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  style="width: 400px;"
                >
                  <div
                    class="bp3-popover-wrapper MultiTypeInput--select MultiTypeInput--fixedValueInput Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.artifactPath"
                          placeholder="pipeline.selectArtifactPathPlaceholder"
                          style="padding-right: 0px;"
                          type="text"
                          value=""
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                            icon="chevron-down"
                          >
                            <svg
                              data-icon="chevron-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                chevron-down
                              </desc>
                              <path
                                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="fieldAndOptions"
          >
            <div
              class="bp3-form-group"
              data-id="pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.build-2"
            >
              <label
                class="bp3-label"
                for="pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.build"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="jenkinsArtifact_pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.build"
                >
                  pipeline.jenkinsBuild
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                  style="width: 400px;"
                >
                  <div
                    class="TextInput--main MultiTypeInput--input"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        class="bp3-input"
                        disabled=""
                        name="pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.build"
                        placeholder="<+input>"
                        type="text"
                        value="<+input>"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <span
              class="bp3-popover-wrapper bp3-dark"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                  id="configureOptions_pipeline.stages[0].stage.spec.serviceConfig.serviceDefinition.spec.artifacts.primary.spec.build"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-cog StyledProps--main"
                    icon="cog"
                  >
                    <svg
                      data-icon="cog"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        cog
                      </desc>
                      <path
                        d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
